--- a/src/style.scss
+++ b/src/style.scss
@@ -4,11 +4,7 @@
 body {
   margin: 0;
   font-family: "OpenSans" !important;
-  background: linear-gradient(
-    -90deg,
-    rgba(6, 0, 38, 1),
-    rgba(57, 52, 161, 0.94)
-  );
+  background: linear-gradient(180deg, rgba(6, 0, 38, 0.83), rgb(13, 10, 31));
 }
 
 :focus {
@@ -35,37 +31,5 @@ body {
   margin: 0 auto;
   @include rwd(1440) {
     max-width: 1440px;
-  }
-}
-
-.gdao-phoenix-bg {
-  display: block;
-  position: fixed;
-  z-index: 1;
-  height: 100vh;
-  bottom: -50vh;
-  right: 0;
-  transform: translateX(45%);
-  object-fit: cover;
-  filter: brightness(0.85);
-  content: url("./assets/logos/governor-bg.png");
-  @include md {
-    bottom: -40vh;
-  }
-}
-
-.gdao-texture-bg {
-  display: block;
-  position: fixed;
-  z-index: 2;
-  bottom: -40vh;
-  right: 0;
-  object-fit: cover;
-  content: url("./assets/texture/bg-texture.png");
-  @include sm {
-    bottom: -10vh;
-  }
-  @include md {
-    bottom: 0;
   }
 }
